        requests.  The Silva root needs to be refreshed in order to
        take advantage of this cache manager.  Refreshing happens
        automatically during Silva upgrades.

      - 101351 Extension registration now allows multuple extensions in 
        the depends_on argument (in the form of tuples).  The zcml
        silva:extension depends_on directive, if present, now requires tuples.

    Features ported from 2.0 branch

      - additional behaviour to mangle.Id.new(), when passing True
        as the first argument one can suppress the ValueError raised
        on invalid ids (and always have a new id generated)

    Bugs Fixed:

      - Changed the new version button in the editor screen from an input to
        a button, to avoid css conflicts with frontend.css controls styles

      - fixed 156921: Escaping image title strings.

      - fixed 101240: SilvaExternalSource cannot be disabled.

      - fixed 100835: image upload screen should show allowed formats

      - fixed 101174: When an id is in use on the Zope level, inform 
                      users accordingly
      
      - Added True switch to Image.py tag method to escape double quotes.

      - Changed the 'priority' attribute of the silva:content zcml
        attribute to a float, to support more granular priorities
        (they way it was prior to Silva 2.0 zcml)

    Bugfixes ported from 2.0 branch

      - fixed WuW144: Images were not always shown correctly in kupu 
        when resized.

      - fixed 158381: Group objects should be removable even if the 
        groups service isn't installed.

      - fixed 158384: can't add groups: title error issue

      - fixed 157010: anchors in links: # -> %23

      - fixed wuw144: Incorrect caching of images. 
                      (was reverted in silva-2.0.3b1)

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.
